@startuml

class Juego{}

class Jugador{
    - Tiempo tiempo
}

class Partida{
    - jugador: Jugador
    - interpol: Interpol
    - ladron: Ladron
    - objetoRobado: ObjetoRobado
    - tiempo: Tiempo
    - ciudades: Ciudades
}

class ObjetosRobados{
    - ciudades: Ciudades
}

class ObjetoRobado{
    - ciudadOrigen: Ciudad
}

class Interpol{}

class Tiempo{}

class Ciudades{}

class Ciudad{}

Juego "1"*-->"1" Jugador
Juego "1"*-->"1" Tiempo
Juego "1"*-->"1...*" Partida
Juego "1"*-->"1" Interpol
Juego "1"*-->"1...*" ObjetosRobados
Juego "1"*-->"1" Ladrones
Juego *--> Ciudades

Interpol --> Ladrones
Ladrones "1"-->"1...*" Ladron
Ciudades "1"-->"1...*" Ciudad
ObjetosRobados --> ObjetoRobado

@enduml